--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-social-media-embed": "^2.2.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
