--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-multi-carousel": "^2.8.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-social-media-embed": "^2.2.13",
+    "socket.io-client": "^4.5.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
