--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "react-scroll-to-bottom": "^4.2.0",
     "react-social-media-embed": "^2.2.13",
+    "react-toastify": "^9.1.1",
     "socket.io-client": "^4.5.4",
     "web-vitals": "^2.1.4"
   },
