--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "emoji-picker-react": "^4.4.7",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-chrono": "^2.2.0",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.2",
     "react-router-dom": "^6.4.3",
