--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.5",
+    "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/styled-engine": "^5.11.0",
@@ -14,6 +14,7 @@
     "emoji-picker-react": "^4.4.7",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.3",
     "react-chrono": "^2.2.0",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.2",
