--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-awesome-reveal": "^4.2.3",
     "react-chrono": "^2.2.0",
     "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "react-multi-carousel": "^2.8.2",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
